--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "serve": "next build && next export"
   },
   "dependencies": {
+    "@capacitor-firebase/authentication": "^1.3.0",
     "@capacitor/android": "^4.0.0",
     "@capacitor/core": "^4.0.0",
     "@capacitor/ios": "^4.0.0",
@@ -20,7 +21,9 @@
     "@ionic/react": "^6.2.9",
     "@ionic/react-router": "^6.2.9",
     "autoprefixer": "^10.2.6",
+    "axios": "^1.3.3",
     "classnames": "^2.2.6",
+    "firebase": "^9.17.1",
     "next": "^12.2.0",
     "postcss": "^8.3.5",
     "react": "^18.2.0",
