--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^5.2.0",
     "react-virtuoso": "^1.1.1"
   },
