Updated profile photo uploads

--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -56,5 +56,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>You can take photos to document your job.</string>
 </dict>
 </plist>
