--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@capacitor/status-bar": "^4.0.0",
     "@ionic/react": "^6.2.9",
     "@ionic/react-router": "^6.2.9",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "axios": "^1.3.3",
     "classnames": "^2.2.6",
     "firebase": "^9.17.1",
